RAP-104 Address sonar feedback for all REST Controllers